# CRPTO

./: .gitignore  CryptoTicker.spec  README.md  build_exe.bat  build_exe_debug.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.hypothesis/constants/: 04ecc36dfac1635f  057db773a8d9c186  07070db902be3dc8  1a487da740d6bc7a  1a92a0fc331a7925  206e0798402cb1ae  2382571bdfe79c32  23ba05a906038fd0  2ab71fc1c030cbaa  2cab60321a3bdd2e  2cea9fd7440b4e25  33c7cee74484b50a  346f325a1c16059a  3aac1b717e73ec29  4392fc4e28e9bc34  48e67cc97d1c457a  4d696e1900cb8fe7  4ea559910949f2c8  4fe07370c16b4af4  503c961f74f04bbb  5e4d78b3523de46e  6878add428790c15  687d2674971d8b31  74a858f3905a1110  77d442c60846746b  7dc7db6d92be3df3  87f399f91ef1cbb8  8bb5babf508a2f61  8eeb9ee1fd60ea39  9e2c0f3c03d246f2  a19722dac2598403  a5bd0f3730038b8a  a90802e3cb2c6a54  aeac1ff11e0b08ee  aeafaf3d645cf427  b30ad9fb8cab12df  b82bcd5e4c1a3702  b8de9850a0c8da41  c75f2afeb859558e  c9ab76f30d65b9e4  (+7 more)
app/: main.py  theme.py
app/data/: providers.py
app/storage/: __init__.py  (+1 more)
scripts/: ensure_dlls.ps1  pyi_rth_dll_search_path.py
tests/: conftest.py  test_analytics_properties.py  test_input_validator_properties.py  test_navigation_properties.py  test_order_confirmation_properties.py  test_order_service_properties.py  test_portfolio_properties.py  test_position_quick_actions_properties.py  test_providers.py  test_quantity_calculator_properties.py  test_slider_properties.py  test_storage_properties.py  test_symbol_dropdown_properties.py  test_theme.py  test_theme_properties.py  test_ws.py
(+69 files in other folders)
