[project]
name = "crypto-ticker"
version = "0.1.0"
description = "PySide6 desktop crypto ticker with WS/REST"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "httpx>=0.27",
  "truststore>=0.9",
]

[project.scripts]
crypto-ticker = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
